--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,35 +1,18 @@
 <!DOCTYPE html>
+{% if site.rtl %}
+<html dir="rtl">
+{% else %}
 <html>
-  <head>
-    <title>{{ page.title }}</title>
-    
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-  
-  </head>
-
-
-  <body>
-    <nav>
-<ul>
-<li><a href="/">Home</a></li>
-<li><a href="/about">About</a></li>
-<li><a href="/cv">CV</a></li>
-<li><a href="/blog">Blog</a></li>
-<li><a href="/curriculum">Curriculum</a></li>
-</ul>
-    </nav>
-<div class="container">
-
+{% endif %}
+<head>
+  {% include head.html %}
+</head>
+<body>
+  {% include header.html %}
+  <div class="container">
   {{ content }}
 
-</div>
-  
-  <footer>
-   <ul>
-   <li><a href="mailto:zhanebennett@gmail.com">email</a></li>
-   <li><a href="https://github.com/zhaben">github.com/zhaben</a></li>
-   </ul>
-  </footer>
-  </body>
-
+  {% include footer.html %}
+  </div><!-- /.main -->
+</body>
 </html>
