--- a/_includes/paypal.html
+++ b/_includes/paypal.html
@@ -1,10 +1,9 @@
 {% if site.donations.paypal %}
-  <form class="paypalform" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-    <input type="hidden" name="cmd" value="_s-xclick">
-    <input type="hidden" name="hosted_button_id" value="{{ site.donations.paypal.id | default: 'UNCONFIGURED' }}">
-    <button class="donations uk-button uk-button-primary" name="submit">
-      <span>{{ site.donations.paypal.text | default: 'Donations' }}</span>
-    </button>
-    <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
-  </form>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_donations" />
+<input type="hidden" name="business" value="6QCBKQ65SMTDS" />
+<input type="hidden" name="currency_code" value="USD" />
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+</form>
 {% endif %}
