--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: default
 
         {{ content }}
         {% if site.disqus.shortname %}
-          {% include disqus_comments.html %}
+          {% include disqus.html %}
         {% endif %}
         <hr>
 
