--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,7 +47,7 @@
             </a>
           </li>
           {% endif %}
-          {% if site.donations.paypal.text.id %}
+          {% if site.donations.paypal %}
             {% include paypal.html %}
           {% endif %}
         </ul>
