--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,7 +48,14 @@
           </li>
           {% endif %}
           {% if site.donations.paypal %}
-            {% include paypal.html %}
+            <form class="paypalform" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+              <input type="hidden" name="cmd" value="_s-xclick">
+              <input type="hidden" name="hosted_button_id" value="{{ site.donations.paypal.id | default: 'UNCONFIGURED' }}">
+              <button class="donations uk-button uk-button-primary" name="submit">
+                <span>{{ site.donations.paypal.text | default: 'Donations' }}</span>
+              </button>
+            <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
           {% endif %}
         </ul>
         <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
