--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,10 @@
     {% include paypal.html %}
 
     {% include scripts.html %}
-    {% include analytics.html %}
+    
+    {% if jekyll.environment == 'production' %}
+      {% include analytics.html %}
+    {% endif %}
   </body>
 
 </html>
